// Copyright (c) .NET Foundation. All rights reserved.
// Licensed under the Apache License, Version 2.0. See License.txt in the project root for license information.

syntax = "proto3";

import "google/api/annotations.proto";

package todo.v1;

service Todo {
  rpc TodoList (TodoRequest) returns (TodoListResponse) {
    option (google.api.http) = {
      get: "/v1/todo"
    };
  }
}

message TodoRequest {
    string title = 1;
}


message TodoListResponse {
    repeated TodoItem items = 1;
}

message TodoItem {
  string title = 1;
  string description = 2;
}
